# cargo-e

./: .document  .gitignore  CHANGELOG.md  Cargo.toml  README-PLUGINS.md  README.md  build.rs  build_addendum_utils.rs  build_docs.rs
.github/workflows/: release-plz.yml  rust.yml
addenda/e_genai_summarize/: Cargo.toml
addenda/e_update_readme/: Cargo.toml  README.md
addendum/e_ai_summarize/: CHANGELOG.md  Cargo.toml  README.md  README.py
addendum/e_ai_summarize/example_output_summaries/: example_output.252903_0031.md
addendum/e_ai_summarize/src/: file_gatherer.rs  lib.rs  main.rs
addendum/e_ai_summarize/src/cargo_utils/: mod.rs
addendum/e_ai_summarize/src/cli/: mod.rs
addendum/e_ai_summarize/src/cli/commands/: genhere.rs  genscript.rs  mod.rs  summarize.rs
addendum/e_ai_summarize/src/clipboard/: mod.rs
addendum/e_ai_summarize/src/crate_recreator_py/: mod.rs  script_generator.rs
addendum/e_ai_summarize/src/crate_recreator_rs/: mod.rs  script_generator.rs
addendum/e_ai_summarize/src/resolver/: mod.rs
addendum/e_ai_summarize/src/summarizer/: mod.rs
addendum/e_crate_version_checker/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cargo-e.CHANGELOG.md
addendum/e_crate_version_checker/src/: e_crate_update.rs  e_interactive_crate_upgrade.rs  lib.rs  main.rs
addendum/e_crate_version_checker/tests/: embed_changelog.rs
addendum/e_obs/: CHANGELOG.md  Cargo.toml  README.md
addendum/e_obs/obs_scene/: README.md  e_obs_scene_collection.json
addendum/e_obs/src/: main.rs
addendum/e_window/: CHANGELOG.md  Cargo.toml  README.md
addendum/e_window/examples/: panic_card_sim.rs  position_grid_demo.rs  realtime_control.rs
addendum/e_window/src/: app.rs  control.rs  lib.rs  main.rs  parser.rs  pool_manager.rs  position_grid.rs  position_grid_manager.rs  uxn.rs  window_easing.rs
cargo-e/: CHANGELOG.md  Cargo.toml  LAST_RELEASE  LICENSE-APACHE-2.0  LICENSE-MIT  NOTICE  README.md  build.rs  build_readme.rs
cargo-e/documents/: Cargo_Managing_Internal_Dependencies_in_Workspaces.md  guide.md
cargo-e/examples/: funny_example.rs
cargo-e/experiments/: cargo-e-lib_rust-script_egui.rs  ext_gui.rs  ext_run_gui.rs
cargo-e/plugins/: demo_fallback.rhai  example.rhai  lua_test.lua  npm.lua
cargo-e/plugins/my_scotch/: Cargo.toml  build.sh  lib.rs
cargo-e/plugins/my_scotch/examples/: build.rs
cargo-e/plugins/plain_wasm/: Cargo.toml
cargo-e/plugins/plain_wasm/src/: lib.rs
cargo-e/plugins/wasm_plugin/: Cargo.toml
cargo-e/plugins/wasm_plugin/src/: main.rs
cargo-e/src/: a_funny_docs.rs  e_autosense.rs  e_bacon.rs  e_cargocommand_ext.rs  e_cli.rs  e_collect.rs  e_command_builder.rs  e_diagnostics_dispatchers.rs  e_discovery.rs  e_eventdispatcher.rs  e_features.rs  e_findmain.rs  e_fmt.rs  e_installer.rs  e_manifest.rs  e_parser.rs  e_prebuild.rs  e_processmanager.rs  e_prompts.rs  e_reports.rs  e_runall.rs  e_runner.rs  e_target.rs  e_tui.rs  e_types.rs  e_workspace.rs  ext.rs  lib.rs  main.rs
cargo-e/src/plugins/: external_plugin.rs  lua_plugin.rs  main.rs  mod.rs  plugin_api.rs  rhai_plugin.rs  wasm_export_plugin.rs  wasm_plugin.rs
cargo-e/support/: qc.cmd  qc_cap.cmd  release.ps1
cargo-e/tests/: exercise_test_support.rs  test_command_builder.rs  test_example_rhai_plugin.rs  test_funny_docs.rs  test_sample_count.rs  test_single_example_functionality.rs  test_version_readmes.rs
cargo-e/tests/common/: test_testgen.rs  test_utils.rs
documents/: 1_Cool_Examples_With_Cargo_e.md  Cargo_Managing_Internal_Dependencies_in_Workspaces.md  auto-resolve-workspace-errors.md  background.md  guide.md
examples/: funny_example.rs
src/: a_funny_docs.rs  e_bacon.rs  e_cli.rs  e_collect.rs  e_command_builder.rs  e_discovery.rs  e_features.rs  e_findmain.rs  e_manifest.rs  e_parser.rs  e_runner.rs  e_target.rs  e_tui.rs  e_types.rs  inlined_e_crate_version_checker.rs  lib.rs  main.rs
support/: checks.sh  release.ps1
tests/: exercise_test_support.rs  integration_test.rs  mod.rs  test_command_builder.rs  test_funny_docs.rs  test_sample_count.rs  test_single_example_functionality.rs  test_version_feature_flags.rs  testgen_ex_builtin.rs
tests/common/: allfiles.sh  mod.rs  test_existing.rs  test_prelude.rs  test_utils.rs
