[package]
name = "e_ai_summarize"
version = "0.1.0"
edition = "2024"
authors = ["David Horner"]
description = "A Rust code analyzer that summarizes functionality, crate usage, safety, and file operations."
license = "MIT"
repository = "https://github.com/davehorner/cargo-e"
readme = "README.md"
publish = true

[[bin]]
name = "e-ai-summarize"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
env_logger = "0.11.7"
genai = "0.1.23"
log = "0.4.27"
rustyline = "15.0.0"
serde_json = "1.0.140"
tokio = "1.44.1"
tracing-subscriber = "0.3.19"

