[package]
name = "e_ai_summarize"
version = "0.1.13"
edition = "2021"
rust-version = "1.85.1"
authors = ["David Horner"]
description = "A Rust code analyzer that summarizes functionality, crate usage, safety, and file operations."
license = "MIT"
repository = "https://github.com/davehorner/cargo-e"
readme = "README.md"
publish = true

[[bin]]
name = "e_ai_s"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
arboard = "3.4.1"
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["derive"] }
env_logger = "0.11.7"
genai = "0.3"
include_dir = { version = "0.7.4", features = ["glob"] }
log = "0.4.27"
path-slash = "0.2.1"
regex = "1.11.1"
rustyline = "15.0.0"
serde_json = "1.0.140"
tokio = "1.44.1"
toml = "0.8.20"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
which = "7.0.2"

