[package]
name = "e_crate_version_checker"
version = "0.2.0"
authors = ["David Horner"]
edition = "2021"
publish = false

[features]
default = ["check-version","uses_reqwest","uses_serde"]
check-version = []
addendum_inline = []
check-version-program-start = []
uses_reqwest = ["reqwest"]
uses_serde = ["serde", "serde_json"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"], optional=true }
serde = { version = "1.0", features = ["derive"], optional=true }
serde_json = { version = "1.0", optional=true}
