[package]
name = "e_crate_version_checker"
version = "0.1.6"
authors = ["David Horner"]
edition = "2021"
publish = false

[features]
default = ["check-version","uses_reqwest","uses_serde"]
check-version = []
check-version-program-start = []
uses_reqwest = ["dep:reqwest"]
uses_serde = ["dep:serde","dep:serde_json"]
uses_semver = ["dep:semver"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"], optional=true }
serde = { version = "1.0", features = ["derive"], optional=true }
serde_json = { version = "1.0", optional=true}
semver = { version = "1.0.26", optional = true }
