[package]
authors = ["David Horner"]
edition = "2021"
name = "e_obs"
version = "0.1.0"
description = "control OBS via websocket. Open Broadcaster Software control for use with cargo-e"
license = "MIT"
repository = "https://github.com/davehorner/cargo-e/tree/develop/addendum/e_obs"
homepage = "https://github.com/davehorner/cargo-e/tree/develop/addendum/e_obs"
publish = true

[profile.release]
strip = true

[[bin]]
name = "e_obs"
path = 'src/main.rs'

[dependencies]
base64 = "0.22"
chrono = "*"
dirs = "6.0.0"
futures-util = "0.3"
once_cell = "1.21.3"
rand = "0.9.1"
scopeguard = "1.2.0"
serde_json = "1"
sha2 = "0.10"
tokio-native-tls = "0.3"
tokio-tungstenite = "0.26"
url = "2"
wallpaper = "*"
which = "8"

[dependencies.clap]
features = ["derive"]
version = "4"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.uuid]
features = ["v4"]
version = "1"

[target.'cfg(windows)'.dependencies]
[dependencies.windows]
features = ["Win32_System_Registry", "Win32_UI", "Win32_UI_WindowsAndMessaging"]
version = "*"


