[package]
edition = "2021"
name = "e_window"
description = "A window tool. Think WinAPI ShowMessageBox; but more than that."
license = "MIT"
version = "0.1.13"
authors = ["David Horner"]
publish = true

[features]
uses_uxn = ["raven-uxn", "raven-varvara"]
uses_e_midi = ["e_midi"]
default = ["uses_uxn", "uses_e_midi"]


[dependencies]
chrono = "0.4.41"
ctrlc = "3.4.7"
egui = { version = "0.32.0", features = ["persistence", "serde", "log"] }
# epi = "0.17.0"
getargs = "0.5.0"
open = "5.3.2"
serde = { version = "1.0.219", features = ["derive"] }
shell-words = "1.1.0"
snailquote = "0.3.1"
sysinfo = "0.35"
which = "8.0.0"
winit = "0.30.11"
tempfile = "3.20.0"
dashmap = "6.1.0"
once_cell = "1.21.3"
rand = "0.9.1"
zerocopy = "0.8.26"
anyhow = "1.0.98"
serde_json = "1.0.141"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
log = "0.4.27"
egui_tiles = "0.13.0"
env_logger = "0.11.8"

e_midi = { version = "0.1.11", optional = true }
raven-uxn = { version = "0.1.0", optional = true }
raven-varvara = { version = "0.1.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser","processthreadsapi"] }
eframe = { version = "0.32.0", features = ["persistence", "serde"] }
windows = "0.61.3"
e_grid = "0.2.1"
#e_grid = { path = "e_grid"}


[target.'cfg(unix)'.dependencies]
eframe = { version = "0.32.0", features = ["persistence", "serde", "wayland"] }

[lib]
name = "e_window"
path = "src/lib.rs"



