        [package]
        name = "my_scotch"
        version = "0.1.0"
        edition = "2021"

        [lib]
crate-type = ["cdylib"]
# Library is in the root as lib.rs
path = "lib.rs"

        [dependencies]
        scotch-guest        = { path = "../../../guest" }
        scotch-guest-macros = { path = "../../../guest-macros" }

[workspace]
